# TWFarmBot

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: mypy.yml  pylint.yml  ruff.yml  tests.yml
apps/api_server/: README.md  pyproject.toml
apps/api_server/src/twfarmbot_api_server/: __init__.py  __main__.py  app.py  read.py
apps/api_server/src/twfarmbot_api_server/handlers/: __init__.py  camera.py  feedback.py  find_home.py  mount_tool.py  move.py  path.py  pin.py  watering.py
apps/resireg_server/: README.md  pyproject.toml
apps/resireg_server/src/twfarmbot_resireg_server/: __init__.py  client_infer.py  client_traverse.py  resireg_cli.py  server.py
apps/ui/: README.md  pyproject.toml
apps/ui/src/twfarmbot_ui/: __init__.py  __main__.py  app.py  client.py  history.py
apps/worker/: README.md  pyproject.toml
apps/worker/src/twfarmbot_worker/: __init__.py  __main__.py
configs/: README.md  dev.yaml
core/: README.md  pyproject.toml
core/twfarmbot_core/: __init__.py  actions.py
core/twfarmbot_core/config/: __init__.py  settings.py
core/twfarmbot_core/domain/: __init__.py  action.py  bed.py  plant.py  sensor_reading.py  spatial.py
core/twfarmbot_core/events/: __init__.py  bus.py  events.py
core/twfarmbot_core/logging/: __init__.py  setup.py
docs/: README.md  architecture.md
experiments/plant_state_estimation/: README.md
experiments/vlm_grounding/: README.md
experiments/watering_strategy_eval/: README.md
libs/farmbot_client/: README.md  pyproject.toml
libs/farmbot_client/farmbot_client/: __init__.py  client.py
libs/farmbot_serial/: README.md  pyproject.toml
libs/farmbot_serial/farmbot_serial/: __init__.py  client.py
libs/geometry/: README.md
libs/ml_utils/: README.md  pyproject.toml
libs/ml_utils/src/twfarmbot_ml_utils/: __init__.py  huggingface.py
libs/vision_utils/: README.md
projects/student_project_soil_mapping/: README.md
projects/student_project_vlm_planner/: README.md
projects/student_project_weed_detection/: README.md
scripts/: install_services.sh  logs.sh  restart_all.sh  start_all.sh  stop_all.sh  test_farmbot_connect.py  test_farmduino_local.py
scripts/systemd/: twfarmbot-api.service  twfarmbot-resireg.service  twfarmbot-ui.service
services/farmbot_gateway/: README.md  pyproject.toml
services/farmbot_gateway/farmbot_gateway/: __init__.py
services/planning_service/: README.md  pyproject.toml
services/planning_service/planning_service/: __init__.py  agent.py  chat.py  client.py  config.py  execution_tools.py  introspection.py  parser.py  path_planning.py  prompt.py  providers.py  tools.py
services/planning_service/planning_service/harness/: __init__.py  agent_loop.py  approval_gate.py  context_builder.py  metrics.py  reasoning_controller.py  tool_policy.py  tool_registry.py  tracing.py
services/safety_service/: README.md  pyproject.toml
services/safety_service/safety_service/: __init__.py
services/sensor_service/: README.md
services/spatial_service/: README.md  pyproject.toml
services/spatial_service/spatial_service/: __init__.py
services/vision_service/: README.md
services/watering_service/: README.md  pyproject.toml
services/watering_service/watering_service/: __init__.py
services/watering_service/watering_service/backends/: base.py  direct_serial.py  farmbot.py
tests/: README.md  test_actions.py  test_actions_endpoint.py  test_api_startup.py  test_assistant_tab.py  test_farmbot_backend.py  test_farmbot_connection.py  test_farmbot_gateway.py  test_farmbot_serial.py  test_harness.py  test_history.py  test_introspection.py  test_path_planning.py  test_plan_endpoint.py  test_planning_config.py  test_planning_parser.py  test_planning_prompts.py  test_planning_service.py  test_providers.py  test_read_endpoints.py  test_smoke.py  test_spatial_service.py  test_ui.py  test_watering.py
