[project]
name = "twfarmbot"
version = "0.1.0"
description = "Implementation of the FarmBot at UAS Technikum Wien"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "twfarmbot-core",
    "twfarmbot-ml-utils",
    "twfarmbot-spatial-service",
    "farmbot-client",
    "twfarmbot-gateway",
    "twfarmbot-safety-service",
    "twfarmbot-watering-service",
    "twfarmbot-planning-service",
    "twfarmbot-api-server",
    "twfarmbot-ui",
    "twfarmbot-worker",
    "ruamel-yaml>=0.19.1",
]

[tool.uv.sources]
twfarmbot-core = { workspace = true }
twfarmbot-ml-utils = { workspace = true }
twfarmbot-spatial-service = { workspace = true }
farmbot-client = { workspace = true }
twfarmbot-gateway = { workspace = true }
twfarmbot-safety-service = { workspace = true }
twfarmbot-watering-service = { workspace = true }
twfarmbot-planning-service = { workspace = true }
twfarmbot-api-server = { workspace = true }
twfarmbot-ui = { workspace = true }
twfarmbot-worker = { workspace = true }

[tool.uv.workspace]
members = [
    "core",
    "libs/farmbot_client",
    "libs/ml_utils",
    "services/spatial_service",
    "services/farmbot_gateway",
    "services/safety_service",
    "services/watering_service",
    "services/planning_service",
    "apps/ui",
    "apps/api_server",
    "apps/worker",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "httpx>=0.27",
    "pylint>=3.0",
] 

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:The starlette.testclient module:RuntimeWarning",
    "ignore:Using `httpx` with `starlette.testclient`:DeprecationWarning",
] 
