[project]
name = "twfarmbot-core"
version = "0.1.0"
description = "Shared domain types, config, logging, and event primitives."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["twfarmbot_core"]
