[project]
name = "twfarmbot-api-server"
version = "0.1.0"
description = "Exposes the FarmBot + sensor + experiment API."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "twfarmbot-core",
]

[project.scripts]
twfarmbot-api = "twfarmbot_api_server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/twfarmbot_api_server"]
