[project]
name = "twfarmbot-resireg-server"
version = "0.1.0"
description = "ReSiReg-Mini vision server integrated into TWFarmBot."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "transformers",
    "pillow",
    "matplotlib",
    "numpy",
    "requests",
    "fastapi",
    "uvicorn",
    "opencv-python-headless",
    "psutil",
    "scikit-learn",
    "fast-pytorch-kmeans",
]

[project.scripts]
resireg-server = "twfarmbot_resireg_server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/twfarmbot_resireg_server"]
