[project]
name = "twfarmbot-ui"
version = "0.1.0"
description = "Dashboard, sensor display, and manual triggers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "twfarmbot-core",
    "twfarmbot-ml-utils",
    "altair>=5",
    "httpx>=0.27",
    "streamlit>=1.30",
    "streamlit-autorefresh>=1",
] 

[project.scripts]
twfarmbot-ui = "twfarmbot_ui.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/twfarmbot_ui"]
