[project]
name = "twfarmbot-worker"
version = "0.1.0"
description = "Background jobs and experiment execution."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "twfarmbot-core",
]

[project.scripts]
twfarmbot-worker = "twfarmbot_worker.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/twfarmbot_worker"]
