[project]
name = "farmbot-client"
version = "0.1.0"
description = "WiFi client for FarmBot, wraps the official farmbot-py library."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["farmbot"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["farmbot_client"]
