[project]
name = "farmbot-serial"
version = "0.1.0"
description = "Direct USB-serial driver for the Farmduino G-code/F-code protocol."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyserial>=3.5",
    "pyyaml>=6.0",
    "twfarmbot-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["farmbot_serial"]
