[project]
name = "twfarmbot-gateway"
version = "0.1.0"
description = "Gateway service: the only module allowed to talk to the FarmBot."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "twfarmbot-core",
    "farmbot-client",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["farmbot_gateway"]
