[project]
name = "twfarmbot-safety-service"
version = "0.1.0"
description = "Gates every action that affects the real world."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "twfarmbot-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["safety_service"]
