[project]
name = "twfarmbot-watering-service"
version = "0.1.0"
description = "Orchestrates manual watering actions through safety + a pluggable backend."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "twfarmbot-core",
    "twfarmbot-safety-service",
    "pyyaml>=6.0",
] 

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["watering_service"]
